--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
 <script type="text/javascript" src="jcanvas.min.js"></script>
-<script type="text/javascript" src="band.js"></script>
+<script type="text/javascript" src="bando.js"></script>
 <link rel="stylesheet" type="text/css" href="band.css">
 <title>Band/Orchestra Seating Chart</title>
 <meta name="description" content="A free browser-based tool for generating and printing semicircular seating charts.">
