--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 <head>
-<script type="text/javascript" src="jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src="jcanvas.min.js"></script>
-<script type="text/javascript" src="band.js"></script>
-<link rel="stylesheet" type="text/css" href="band.css">
-<title>Band/Orchestra Seating Chart</title>
-<meta name="description" content="A free browser-based tool for generating and printing semicircular seating charts.">
+  <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
+  <script type="text/javascript" src="jcanvas.min.js"></script>
+  <script type="text/javascript" src="band.js"></script>
+  <link rel="stylesheet" type="text/css" href="band.css">
+  <title>Band/Orchestra Seating Chart</title>
+  <meta name="description" content="A free browser-based tool for generating and printing semicircular seating charts.">
 </head>
+  
 <body>
 
   
@@ -110,21 +111,26 @@
   
   
   
-  <div id='helplink' class='noprint'><a href='help.html' onclick='showHelp(); return false;'>Help / About</a></div>
-  <p class='noprint'>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!<br>
-  <span id='loadlink'><a href='#' onclick='return false;'>Load saved chart</a></span>
-  <span id='loadcontainer' class='hidden'>
-  <span id='loadfilecontainer'><span style='color: green;'>Select a saved chart from your computer:</span> <input type="file" accept=".txt" id="fileinput"><br>
-  <span style='color: #888;' id='loadcodelabel'>You may also <a href='javascript:showCodeInput()' style='color: #88f !important;'>input a code manually</a></span></span>
-  <span id='loadcodecontainer' class='hidden'><br>Chart code: <textarea id='loadcode' style='vertical-align: top;'></textarea><input type='button' value='Load' id='load'></span>
-  </span>
-  <span id='loadmessage' class='hidden' style='color: red;'></span>
-  </p>
-  <hr class='noprint'>
+  <div id='helplink' class='noprint'>
+    <a href='help.html' onclick='showHelp(); return false;'>Help / About</a>
+  </div>
+  
+  <div class='header'>
+    <p class='noprint'>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!<br>
+    <span id='loadlink'><a href='#' onclick='return false;'>Load saved chart</a></span>
+    <span id='loadcontainer' class='hidden'>
+    <span id='loadfilecontainer'><span style='color: green;'>Select a saved chart from your computer:</span> <input type="file" accept=".txt" id="fileinput"><br>
+    <span style='color: #888;' id='loadcodelabel'>You may also <a href='javascript:showCodeInput()' style='color: #88f !important;'>input a code manually</a></span></span>
+    <span id='loadcodecontainer' class='hidden'><br>Chart code: <textarea id='loadcode' style='vertical-align: top;'></textarea><input type='button' value='Load' id='load'></span>
+    </span>
+    <span id='loadmessage' class='hidden' style='color: red;'></span>
+    </p>
+    <hr class='noprint'>
+  </div>
   <div id='wrapper' style='text-align: center'>
-  <h1 class='title'></h1>
-  <canvas id='canvas' width='1050' height='510'>Sorry, your browser does not support Canvas. :(</canvas>
-  <canvas id='guide_canvas' width='1050' height='510' class='noprint'>Sorry, your browser does not support Canvas. :(</canvas>
+    <h1 class='title'></h1>
+    <canvas id='canvas' width='1050' height='510'>Sorry, your browser does not support Canvas. :(</canvas>
+    <canvas id='guide_canvas' width='1050' height='510' class='noprint'>Sorry, your browser does not support Canvas. :(</canvas>
   </div>
   <div id='input_container' class='noprint'>
   <div id='input_main'><p><b>Enter number of chairs per row:</b><br><span style='color: #090;'>New! Partial rows / hide chairs. <a href='help.html#partial' onclick='javascript:showHelp("partial"); return false;'>How?</a></span></p>
