--- a/index.html
+++ b/index.html
@@ -119,25 +119,38 @@
     </div>
     
     <p class='noprint'>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!<br>
-    <span id='loadlink'><a href='#' onclick='return false;'>Load saved chart</a></span>
-    <span id='loadcontainer' class='hidden'>
-    <span id='loadfilecontainer'><span style='color: green;'>Select a saved chart from your computer:</span> <input type="file" accept=".txt" id="fileinput"><br>
-    <span style='color: #888;' id='loadcodelabel'>You may also <a href='javascript:showCodeInput()' style='color: #88f !important;'>input a code manually</a></span></span>
+      <span id='loadlink'>
+        <a href='#' onclick='return false;'>Load saved chart</a>
+      </span>
+      <span id='loadcontainer' class='hidden'>
+        <span id='loadfilecontainer'>
+          <span style='color: green;'>Select a saved chart from your computer:</span>
+          <input type="file" accept=".txt" id="fileinput"><br>
+          <span style='color: #888;' id='loadcodelabel'>You may also <a href='javascript:showCodeInput()' style='color: #88f !important;'>input a code manually</a></span></span>
     <span id='loadcodecontainer' class='hidden'><br>Chart code: <textarea id='loadcode' style='vertical-align: top;'></textarea><input type='button' value='Load' id='load'></span>
     </span>
     <span id='loadmessage' class='hidden' style='color: red;'></span>
     </p>
     <hr class='noprint'>
+    <a href='javascript:window.print()'>print</a>
   </div>
+  
   <div id='wrapper' style='text-align: center'>
     <h1 class='title'></h1>
     <canvas id='canvas' width='1050' height='510'>Sorry, your browser does not support Canvas. :(</canvas>
     <canvas id='guide_canvas' width='1050' height='510' class='noprint'>Sorry, your browser does not support Canvas. :(</canvas>
   </div>
+  
   <div id='input_container' class='noprint'>
-  <div id='input_main'><p><b>Enter number of chairs per row:</b><br><span style='color: #090;'>New! Partial rows / hide chairs. <a href='help.html#partial' onclick='javascript:showHelp("partial"); return false;'>How?</a></span></p>
-  <div id='rows'>
-  <p>Row 1: <input id='row1' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(1)' tabindex='2'>Edit labels</a></p><p>Row 2: <input id='row2' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(2)' tabindex='2'>Edit labels</a></p><p>Row 3: <input id='row3' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(3)' tabindex='2'>Edit labels</a></p><p>Row 4: <input id='row4' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(4)' tabindex='2'>Edit labels</a></p><p>Row 5: <input id='row5' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(5)' tabindex='2'>Edit labels</a></p><p>Row 6: <input id='row6' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(6)' tabindex='2'>Edit labels</a></p><p>Row 7: <input id='row7' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(7)' tabindex='2'>Edit labels</a></p><p>Row 8: <input id='row8' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(8)' tabindex='2'>Edit labels</a></p></div>
+    <div id='input_main'>
+      <p><b>Enter number of chairs per row:</b><br>
+        <span style='color: #090;'>New! Partial rows / hide chairs.
+          <a href='help.html#partial' onclick='javascript:showHelp("partial"); return false;'>How?
+          </a>
+        </span>
+      </p>
+    <div id='rows'>
+      <p>Row 1: <input id='row1' size='2' maxlength='2' tabindex='1'></input> <a class='editlabellink' href='javascript:editLabels(1)' tabindex='2'>Edit labels</a></p><p>Row 2: <input id='row2' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(2)' tabindex='2'>Edit labels</a></p><p>Row 3: <input id='row3' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(3)' tabindex='2'>Edit labels</a></p><p>Row 4: <input id='row4' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(4)' tabindex='2'>Edit labels</a></p><p>Row 5: <input id='row5' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(5)' tabindex='2'>Edit labels</a></p><p>Row 6: <input id='row6' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(6)' tabindex='2'>Edit labels</a></p><p>Row 7: <input id='row7' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(7)' tabindex='2'>Edit labels</a></p><p>Row 8: <input id='row8' size='2' maxlength='2' tabindex='1'></input><a class='editlabellink' href='javascript:editLabels(8)' tabindex='2'>Edit labels</a></p></div>
   <p><a href='javascript:addRow()'>Add Row</a></p>
   <p>Straight rows: <input type='button' id='btnstraightdown'value='-'></input> <input type='button' id='btnstraightup' value='+'></input> <span id='straight'>0</span></p>
   <input type='checkbox' id='chknumbers' checked='checked' style='float: left'></input><div style='margin-left: 25px; margin-bottom: 7px;'><label for='chknumbers'>Show numbers on seats</label></div>
@@ -157,6 +170,7 @@
   <p>Label size: <input type='button' id='btnrowlabelscaledown' value='-'></input> <input type='button' id='btnrowlabelscaleup' value='+'></input></p>
   <p><input type='button' id='btnlabeldone' value='Done' style='font-size: 16pt;'></input></p>
   </div>
+  
   <p style='text-align: center;'><br>When you are finished, you can <a href='javascript:window.print()'>print</a> this page. Landscape mode is recommended.<br>
     You can also <a href='javascript:save()'>save this chart</a> to edit later, or <a href='javascript:email()'>send a link to this chart by email</a>.</p>
   <p style='text-align: center;' class='hidden' id='bottommessage'></p>
@@ -172,13 +186,7 @@
   </style>
   <div id='helpstyle'>
   <h1>Band/Orchestra Seating Chart Generator</h1>
-  <p>A few years ago, my dad, an elementary school band teacher, asked me if I could create a 
-    tool that would make it easier to create seating charts. I though it sounded like a fun 
-    little exercise, so I did.</p>
-
-  <p>Much to my surprise, it's become quite popular among those who I can only assume are teachers 
-    of the musical persuasion, getting on average 1,000 visits per week from dozens of different countries. 
-    And I think that's pretty cool!</p>
+  <p>This tool is an adaptation of the original script by Brad Greco.  You can find his original version of this tool <a href="https://www.bgreco.net/band/">here.</a></p>
 
   <p>- <a href='/about' target='_blank'>Brad Greco</a></p>
 
