--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
           </span>
         </div>
 
-        <div id='helplink' class='noprint'>
+        <div id='helplink'>
           <a href='help.html' onclick='showHelp(); return false;'>Help / About</a>
         </div>
 
-        <p class='noprint'>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!<br>
+        <p>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!<br>
           <span id='loadlink'>
             <a href='#' onclick='return false;'>Load saved chart</a>
           </span>
@@ -103,9 +103,9 @@
   </style>
   <div id='helpstyle'>
   <h1>Band/Orchestra Seating Chart Generator</h1>
-  <p>This tool is an adaptation of the original script by Brad Greco.  You can find his original version of this tool <a href="https://www.bgreco.net/band/">here.</a></p>
-
-  <p>- <a href='/about' target='_blank'>Brad Greco</a></p>
+  <p>This tool is an adaptation of the original script by <a href='/about' target='_blank'>Brad Greco</a>.  You can find his original version of this tool <a href="https://www.bgreco.net/band/">here.</a></p>
+  <p>The adaptations in this version include: showing the total chairs and total stands, changing the shape of each seat, and an added spot for the director.  The rest of the script was created for the public by Brad Greco.</p>
+    
 
   <h1>FAQ / Advanced usage</h1>
 
