--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   
   <div class='header noprint'>
     <div class='nav' role="navigation">
-      <div class='header-containers'>
-        <div class="align-left-container">
+      <span class='header-containers'>
+        <span class="align-left-container">
           <span role="button" tabindex="0" aria-label="Open Graph (ctrl+o)" class="msp-header-btn msp-action-opendrawer msp-tooltip" tooltip="Open Graph (ctrl+o)" original-title="">
             <i class="msp-icon-hamburger"></i>
           </span>
@@ -24,9 +24,9 @@
           <span class="title-div">
             <span role="button" tabindex="0" class="dcg-variable-title dcg-tooltip dcg-action-savedialog" tooltip="Duplicate or Rename (ctrl+shift+s)" aria-label="Conic Sections: Circle. To duplicate or rename this graph, press ctrl+shift+s" original-title="">Conic Sections: Circle</span>
           </span>
-        </div>
+        </span>
         
-        <div class='align-center-container'>
+        <span class='align-center-container'>
           <p>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!<br>
             <span id='loadlink'>
               <a href='#' onclick='return false;'>Load saved chart</a>
@@ -43,14 +43,14 @@
             </span>
             <span id='loadmessage' class='hidden' style='color: red;'></span>
           </p>
-        </div>
+        </span>
         
-        <div class='align-right-container'>
+        <span class='align-right-container'>
           <a href='javascript:window.print()'>print</a>
           <a href='help.html' onclick='showHelp(); return false;'>Help / About</a>
-        </div>
+        </span>
         <hr class='noprint'>
-      </div>
+      </span>
     </div>
   </div>
   
