--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
   
   <div class='header noprint'>
     <div class='nav' role="navigation">
-      <span class='header-containers'>
-        <span class="align-left-container">
-          <span role="button" tabindex="0" aria-label="Open Graph (ctrl+o)" class="msp-header-btn msp-action-opendrawer msp-tooltip" tooltip="Open Graph (ctrl+o)" original-title="">
+      <div class='header-containers'>
+        <div class="align-left-container">
+          <div role="button" tabindex="0" aria-label="Open Graph (ctrl+o)" class="msp-header-btn msp-action-opendrawer msp-tooltip" tooltip="Open Graph (ctrl+o)" original-title="">
             <i class="msp-icon-hamburger"></i>
-          </span>
+          </div>
 
-          <span class="title-div">
+          <div class="title-div">
             <span role="button" tabindex="0" class="dcg-variable-title dcg-tooltip dcg-action-savedialog" tooltip="Duplicate or Rename (ctrl+shift+s)" aria-label="Conic Sections: Circle. To duplicate or rename this graph, press ctrl+shift+s" original-title="">Conic Sections: Circle</span>
-          </span>
-        </span>
+          </div>
+        </div>
         
-        <span class='align-center-container'>
+        <div class='align-center-container'>
           <p>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!<br>
             <span id='loadlink'>
               <a href='#' onclick='return false;'>Load saved chart</a>
@@ -43,14 +43,14 @@
             </span>
             <span id='loadmessage' class='hidden' style='color: red;'></span>
           </p>
-        </span>
+        </div>
         
         <span class='align-right-container'>
           <a href='javascript:window.print()'>print</a>
           <a href='help.html' onclick='showHelp(); return false;'>Help / About</a>
         </span>
         <hr class='noprint'>
-      </span>
+      </div>
     </div>
   </div>
   
