--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
           </div>
 
           <div class="title-div">
-            <span role="button" tabindex="0" class="dcg-variable-title dcg-tooltip dcg-action-savedialog" tooltip="Duplicate or Rename (ctrl+shift+s)" aria-label="Conic Sections: Circle. To duplicate or rename this graph, press ctrl+shift+s" original-title="">Conic Sections: Circle</span>
+            <div role="button" tabindex="0" class="dcg-variable-title dcg-tooltip dcg-action-savedialog" tooltip="Duplicate or Rename (ctrl+shift+s)" aria-label="Conic Sections: Circle. To duplicate or rename this graph, press ctrl+shift+s" original-title="">Conic Sections: Circle</div>
           </div>
         </div>
         
         <div class='align-center-container'>
-          <p>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!<br>
+          <p>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!
             <span id='loadlink'>
               <a href='#' onclick='return false;'>Load saved chart</a>
             </span>
-            <span id='loadcontainer' class='hidden'>
+<!--            <span id='loadcontainer' class='hidden'>
               <span id='loadfilecontainer'>
                 <span style='color: green;'>Select a saved chart from your computer:</span>
                 <input type="file" accept=".txt" id="fileinput"><br>
@@ -42,16 +42,18 @@
             <span id='loadcodecontainer' class='hidden'><br>Chart code: <textarea id='loadcode' style='vertical-align: top;'></textarea><input type='button' value='Load' id='load'></span>
             </span>
             <span id='loadmessage' class='hidden' style='color: red;'></span>
+-->
           </p>
         </div>
         
-        <span class='align-right-container'>
+        <div class='align-right-container'>
           <a href='javascript:window.print()'>print</a>
           <a href='help.html' onclick='showHelp(); return false;'>Help / About</a>
-        </span>
+        </div>
       </div>
     </div>
   </div>
+  
   <hr class='noprint'>
   <div id='wrapper' style='text-align: center'>
     <h1 class='title'></h1>
