--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <div class='nav' role="navigation">
       <div class='header-containers'>
         <div class="align-left-container">
+          <p>HI</p>
+          <!--
           <div role="button" tabindex="0" aria-label="Open Graph (ctrl+o)" class="msp-header-btn msp-action-opendrawer msp-tooltip" tooltip="Open Graph (ctrl+o)" original-title="">
             <i class="msp-icon-hamburger"></i>
           </div>
@@ -24,14 +26,16 @@
           <div class="title-div">
             <div role="button" tabindex="0" class="dcg-variable-title dcg-tooltip dcg-action-savedialog" tooltip="Duplicate or Rename (ctrl+shift+s)" aria-label="Conic Sections: Circle. To duplicate or rename this graph, press ctrl+shift+s" original-title="">Conic Sections: Circle</div>
           </div>
+          -->
         </div>
         
         <div class='align-center-container'>
           <p>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!
+<!--
             <span id='loadlink'>
               <a href='#' onclick='return false;'>Load saved chart</a>
             </span>
-<!--            <span id='loadcontainer' class='hidden'>
+            <span id='loadcontainer' class='hidden'>
               <span id='loadfilecontainer'>
                 <span style='color: green;'>Select a saved chart from your computer:</span>
                 <input type="file" accept=".txt" id="fileinput"><br>
@@ -47,8 +51,11 @@
         </div>
         
         <div class='align-right-container'>
+          <p>HI</p>
+<!--
           <a href='javascript:window.print()'>print</a>
           <a href='help.html' onclick='showHelp(); return false;'>Help / About</a>
+-->
         </div>
       </div>
     </div>
