--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <div class='header noprint'>
       <div class='header-containers'>
-        <div class="align-left-container">
+        <span class="align-left-container">
           <p>HI</p>
           <!--
           <div role="button" tabindex="0" aria-label="Open Graph (ctrl+o)" class="msp-header-btn msp-action-opendrawer msp-tooltip" tooltip="Open Graph (ctrl+o)" original-title="">
@@ -26,9 +26,9 @@
             <div role="button" tabindex="0" class="dcg-variable-title dcg-tooltip dcg-action-savedialog" tooltip="Duplicate or Rename (ctrl+shift+s)" aria-label="Conic Sections: Circle. To duplicate or rename this graph, press ctrl+shift+s" original-title="">Conic Sections: Circle</div>
           </div>
           -->
-        </div>
+        </span>
         
-        <div class='align-center-container'>
+        <span class='align-center-container'>
           <p>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!
 <!--
             <span id='loadlink'>
@@ -47,7 +47,7 @@
             <span id='loadmessage' class='hidden' style='color: red;'></span>
 -->
           </p>
-        </div>
+        </span>
         
         <div class='align-right-container'>
           <p>HI</p>
