--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
         </div>
       </div>
   </div>
+
+<hr class='noprint'>
   
-<!--  <hr class='noprint'>  -->
   <div id='wrapper' style='text-align: center'>
     <h1 class='title'></h1>
     <canvas id='canvas' width='1050' height='510'>Sorry, your browser does not support Canvas. :(</canvas>
