--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script type="text/javascript" src="band.js"></script>
   <link rel="stylesheet" type="text/css" href="band.css">
   <title>Band/Orchestra Seating Chart</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,500,700|Oswald:300,400,700" rel="stylesheet">
   <meta name="description" content="A free browser-based tool for generating and printing semicircular seating charts.">
 </head>
   
