--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   
   <div class='header noprint'>
-      <div class='header-containers'>
+<!--      <div class='header-containers'> -->
         <div class="align-left-container">
           <p>HI</p>
           <!--
@@ -49,8 +49,8 @@
           <a href='javascript:window.print()'>print</a>
           <a href='help.html' onclick='showHelp(); return false;'>Help / About</a>
         </div>
-      </div>
-  <hr class='noprint'>  
+<!--      </div>
+  <hr class='noprint'>  -->
   </div>
   
 
