--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span id='loadmessage' class='hidden' style='color: red;'></span>
         </div>
         
-        <div class='align-right-container'>
+        <div style="float:right" class='align-right-container'>
           <a href='javascript:window.print()'>print</a>
           <a href='help.html' onclick='showHelp(); return false;'>Help / About</a>
         </div>
