--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,500,700|Oswald:300,400,700" rel="stylesheet">
   <meta name="description" content="A free browser-based tool for generating and printing semicircular seating charts.">
   <link rel="shortcut icon" href="seating_icon_2_0.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
   
 <body>
