--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
   </div>
 
   <input type='checkbox' id='chkstands' style='float: left'></input><div style='margin-left: 25px; margin-bottom: 7px;'><label for='chkstands'>Show music stands</label><span id='helpstands' class='help'><br>Click the chart to toggle stands</span></div>
+<input type='checkbox' id='chkpodium' style='float: left'></input><div style='margin-left: 25px; margin-bottom: 7px;'><label for='chkpodium'>Show podium</label><span id='helppodium' class='help'><br>Click the chart to toggle podium</span></div>
   Seat size: <input type='button' id='btnscaledown' value='-'></input> <input type='button' id='btnscaleup' value='+'></input> <span id='scale'>100</span>%
   <p>Chart title: <input id='title'></input></p>
   <p><input type='button' value='Generate' id='generate'></input>
