--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   </div>
   
   <div class='main-container'>
-    <div id='input_container' class='noprint'>
-      <div id='input_main'>
+    <div id='input-container' class='noprint'>
+      <div id='input-main'>
         <p>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!</p>
         <p><b>Enter number of chairs per row:</b><br>
           <span style='color: #090;'>New! Partial rows / hide chairs.
@@ -104,7 +104,7 @@
     
     <div class='chart-container'>
       <div id='wrapper' style='text-align: center'>
-        <h1 class='title'></h1>
+        <h1 class='title'> </h1>
         <canvas id='canvas' width='1050' height='510'>Sorry, your browser does not support Canvas. :(</canvas>
         <canvas id='guide_canvas' width='1050' height='510' class='noprint'>Sorry, your browser does not support Canvas. :(</canvas>
       </div>
