--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
     </div>
     
     <div id='chart-container'>
-      <div id='wrapper' style='text-align: center'>
+      <span id='wrapper' style='text-align: center'>
         <h1 class='title'> </h1>
         <canvas id='canvas' width='1050' height='510'>Sorry, your browser does not support Canvas. :(</canvas>
         <canvas id='guide_canvas' width='1050' height='510' class='noprint'>Sorry, your browser does not support Canvas. :(</canvas>
-      </div>
+      </span>
     </div>
   </div>
     
