--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
   
   <span id='wrapper' style='text-align: center'>
     <h1 class='title'> </h1>
-    <canvas id='canvas' width='1050' height='510'>Sorry, your browser does not support Canvas. :(</canvas>
-    <canvas id='guide_canvas' width='1050' height='510' class='noprint'>Sorry, your browser does not support Canvas. :(</canvas>
+    <div class='canvas'>
+      <canvas id='canvas' width='1050' height='510'>Sorry, your browser does not support Canvas. :(</canvas>
+      <canvas id='guide_canvas' width='1050' height='510' class='noprint'>Sorry, your browser does not support Canvas. :(</canvas>
+    </div>
   </span>
   
   <div class='main-container'>
