--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div>
   </div>
     
-  <div class= 'extras'>
+  <div class= 'extras noprint'>
     <!-- Footer -->
     <p style='text-align: center;'><br>When you are finished, you can <a href='javascript:window.print()'>print</a> this page. Landscape mode is recommended.<br>
     You can also <a href='javascript:save()'>save this chart</a> to edit later, or <a href='javascript:email()'>send a link to this chart by email</a>.</p>
