--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
     </div>
     
-    <span id='wrapper' style='text-align: center'>
+    <span id='wrapper' style='text-align: center; float:right'>
       <h1 class='title'> </h1>
       <div class='canvas'>
         <canvas id='canvas' width='1050' height='510'>Sorry, your browser does not support Canvas. :(</canvas>
