--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <hr class='noprint'>  -->
   </div>
   
-  <span id='wrapper' style='text-align: center; float:right'>
+  <span id='wrapper' style='text-align: center'>
     <h1 class='title'> </h1>
     <div class='canvas'>
       <canvas id='canvas' width='1050' height='510'>Sorry, your browser does not support Canvas. :(</canvas>
