--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
       </div>
     </div>
     
-    <span id='wrapper' style='text-align: center'>
+    <div id='wrapper' style='text-align: center'>
       <h1 class='title'> </h1>
       <div class='canvas'>
         <canvas id='canvas' width='1050' height='510'>Sorry, your browser does not support Canvas. :(</canvas>
         <canvas id='guide_canvas' width='1050' height='510' class='noprint'>Sorry, your browser does not support Canvas. :(</canvas>
       </div>
-    </span>
+    </div>
   </div>
     
   <div class= 'extras noprint'>
