--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class='header noprint'>
 <!--      <div class='header-containers'> -->
         <div class="align-left-container">
-          <p>HI</p>
+          <p onclick="openNav()">&#9776; HI</p>
           <!--
           <div role="button" tabindex="0" aria-label="Open Graph (ctrl+o)" class="msp-header-btn msp-action-opendrawer msp-tooltip" tooltip="Open Graph (ctrl+o)" original-title="">
             <i class="msp-icon-hamburger"></i>
