--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
     <a href="#">Clients</a>
     <a href="#">Contact</a>
   </div>
+  
+  <div id="main">
+    <h2>Sidenav Push Example</h2>
+    <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
+  </div>
 
   
   <div class='main-container'>
