--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
   <script>
     function openNav() {
         document.getElementById("mySidenav").style.width = "250px";
-        document.getElementById("input-container").style.marginLeft = "250px";
+        document.getElementById("wrapper").style.marginLeft = "250px";
     }
 
     function closeNav() {
         document.getElementById("mySidenav").style.width = "0";
-        document.getElementById("input-container").style.marginLeft= "0";
+        document.getElementById("wrapper").style.marginLeft= "0";
     }
   </script>
   
