--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
           <div role="button" tabindex="0" aria-label="Open Graph (ctrl+o)" class="msp-header-btn msp-action-opendrawer msp-tooltip" tooltip="Open Graph (ctrl+o)" original-title="">
             <i class="msp-icon-hamburger"></i>
           </div>
-
           <div class="title-div">
             <div role="button" tabindex="0" class="dcg-variable-title dcg-tooltip dcg-action-savedialog" tooltip="Duplicate or Rename (ctrl+shift+s)" aria-label="Conic Sections: Circle. To duplicate or rename this graph, press ctrl+shift+s" original-title="">Conic Sections: Circle</div>
           </div>
@@ -56,7 +55,7 @@
   </div>
   
   <div class='new'>
-    <div id="mySidenavq" class="sidenav">
+    <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="#">About</a>
       <a href="#">Services</a>
@@ -72,7 +71,7 @@
 
   
   <div class='main-container'>
-    <div id='mySidenav' class='input-container' class='noprint'>
+    <div id='input-container' class='noprint'>
       <div id='input-main'>
         <p>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!</p>
         <p><b>Enter number of chairs per row:</b><br>
@@ -209,12 +208,11 @@
   <script>
     function openNav() {
         document.getElementById("mySidenav").style.width = "250px";
-        document.getElementById("wrapper").style.marginLeft = "250px";
+        document.getElementById("main").style.marginLeft = "250px";
     }
-
     function closeNav() {
         document.getElementById("mySidenav").style.width = "0";
-        document.getElementById("wrapper").style.marginLeft= "0";
+        document.getElementById("main").style.marginLeft= "0";
     }
   </script>
   
