--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class='header noprint'>
 <!--      <div class='header-containers'> -->
         <div class="align-left-container">
-          <p onclick="openNav()">&#9776; HI</p>
+          <p onclick="openNav()">&#9776; Hi</p>
           <!--
           <div role="button" tabindex="0" aria-label="Open Graph (ctrl+o)" class="msp-header-btn msp-action-opendrawer msp-tooltip" tooltip="Open Graph (ctrl+o)" original-title="">
             <i class="msp-icon-hamburger"></i>
@@ -73,7 +73,7 @@
   <div class='main-container'>
     <div id='input-container' class='noprint'>
       <div id='input-main'>
-        <p>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!</p>
+        <p style='font-size: 12px;'>This is a simple browser-based tool that you can use to generate and print semicircular seating charts. Have fun!</p>
         <p><b>Enter number of chairs per row:</b><br>
           <span style='color: #090;'>New! Partial rows / hide chairs.
             <a href='help.html#partial' onclick='javascript:showHelp("partial"); return false;'>How?
