--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 list-style-type: none;
                 margin: 0;
                 padding: 0;
-                overflow: hidden;
+                overflow-x: hidden;
                 background-color: #333;
             }
 
@@ -196,7 +196,7 @@
             <script>
             /* When the user clicks on the button, 
             toggle between hiding and showing the dropdown content */
-            function loadFunction() {
+            function myFunction() {
                 document.getElementById("myDropdown").classList.toggle("show");
             }
 
